cluster/apps/traefik/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      port: 8443
      hostname: "*.xmple.io"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-xmple-io-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: web
      protocol: HTTP
      port: 8000
      hostname: "*.xmple.io"
      allowedRoutes:
        namespaces:
          from: All
